# Contact-List

kurss/: CMakeLists.txt  ContactDialog.qml  ContactList.qml  Main.qml  contactfiltermodel.cpp  contactfiltermodel.h  contactmodel.cpp  contactmodel.h  main.cpp  resources.qrc
